add new address for docker container